# konan-clean

./: .gitignore.txt
FI9/: FI9_README.md  FI9_RUN.ps1  (+3 more)
backend_konan/backend_konan_SAVE_FI9/: .env.example  .env.production  .envold  .gitignore  Dockerfile  PATCHES_FI9_NAYEK_DEPLOIEMENT.md  PATCHES_FI9_NAYEK_MEP_FINALE.md  PATCHES_FI9_NAYEK_MEP_LOCK_FINALE.md  PATCHES_FI9_NAYEK_VALIDATION_FINALE.md  Procfile  RAPPORT_FI9_NAYEK_DEPLOIEMENT.md  README.md  backup_konan_db.sql  diagnostic_konan.ps1  docker-compose.db.yml  konan_backup_phase4.sql  konan_db_backup.sql  konan_diagnostic.json  pyproject.toml  result.txt  start-backend.ps1  test_api.py  test_app.py  test_konan.ps1  test_konan_ia.ps1  test_phase3.ps1
backend_konan/backend_konan_SAVE_FI9/alembic/versions/: 20251109_merge_heads_after_laws_and_files.py  2eb1e577b9fd_merge_heads_for_users_table.py  3e88a48b10cc_merge_heads_conversations_fix.py  825095e952d3_add_users_table_manually.py  9bccfd72dbb0_fix_alembic_version_column.py  FI9_create_audit_logs.py  FI9_create_conversations_mode_c.py  FI9_patch_users_structure.py  create_conversations_table.py  (+1 more)
backend_konan/backend_konan_SAVE_FI9/app/: crud.py  database.py  models.py  session.py
backend_konan/backend_konan_SAVE_FI9/scripts/: auto_index.sh  fi9_analyze_db_structure.py  merge_data.py
backend_konan/backend_konan_SAVE_FI9/tests/: clean_utf8_final.ps1  fix_utf8.ps1  konan_ia_test_log.clean.normalized.csv  konan_ia_test_log.csv  konan_ia_test_log_utf8.csv  test_auth.py  test_auth_bypass.py  test_auth_local.py  test_db.py  test_endpoints_conversations.py
(+194 files in other folders)
